[package]
name = "ens-ccip-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-ccip-read = { git = "https://github.com/ensdomains/ethers-ccip-read" }
tracing = "0.1.40"
thiserror = { version = "1.0.50", default-features = false }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = "0.11.22"
async-recursion = "1.0.5"
async-trait = { version = "0.1.74", default-features = false }
ethers-core = "2.0.11"
ethers-providers = "2.0.11"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
ethers = "2.0.11"
anyhow = "1.0.75"
axum = "0.7.3"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
